Fix overflow for non-table code embeds

--- a/assets/sass/syntax-highlighting.scss
+++ b/assets/sass/syntax-highlighting.scss
@@ -25,11 +25,16 @@
     pre.chroma {
         margin: 0;
         padding: .6em 0;
+        overflow-x: auto;
 
         .lnt {
             margin: 0;
             padding: 0 0 0 1rem;
         }
+    }
+
+    .lntd pre.chroma {
+        overflow: visible;
     }
 }
 
